hphp/hack/test/typecheck/reified_generics/valid_targ_hint.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

class C<
  reify Tdog,
  Tcat,
  reify Trex,
> {
  public function f<
    reify Tfox
  >(C<Tfox, Tdog, Tcat> $c): void {}
}
